manifests/blog-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: blog
  name: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - image: gcr.io/kubetest-1251/github-nicr9-blog:84d8e99da0dd10b8ecdfe3187d3091c3ae4b5b96
        imagePullPolicy: Always
        name: blog
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-config
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-blog
        name: nginx-config
