manifests/blog-service.yaml
kind: Service
apiVersion: v1
metadata:
    name: blog
spec:
    selector:
        app: blog
    type: NodePort
    ports:
      - port: 80
        targetPort: 80
        nodePort: 30002
